test/ebpf/policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontendpolicy
spec:
  podSelector:
    matchLabels:
      role: frontend
  ingress:
    - ports:
        - port: 443
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: databasepolicy
spec:
  podSelector:
    matchLabels:
      role: database
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: backend
  egress: []
